force-app/main/default/objects/Asset__c/Asset__c.object-meta.xml
<CustomObject>
    <description>Store vehcle and it&apos;s owner information</description>
    <label>Asset</label>
    <nameField>
        <label>Asset Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Assets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>