force-app/main/default/objects/Asset__c/fields/Bmw_Unit__c.field-meta.xml
<CustomField>
    <fullName>Bmw_Unit__c</fullName>
    <label>Bmw Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>IT-Market</fullName>
            </value>
            <value>
                <fullName>PT-Market</fullName>
            </value>
            <value>
                <fullName>BE-Market</fullName>
            </value>
            <value>
                <fullName>DE-Market</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>