force-app/main/default/objects/Asset__c/fields/Gear__c.field-meta.xml
<CustomField>
    <fullName>Gear__c</fullName>
    <label>Gear</label>
    <length>9</length>
    <type>Text</type>
</CustomField>