force-app/main/default/objects/Asset__c/fields/Vehicle_Number__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Number__c</fullName>
    <externalId>true</externalId>
    <label>Vehicle Number</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>